Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5991

Creator crashes with std::bad_alloc

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • Qt Creator 2.4.0
    • Test Integration
    • None
    • Linux Kubuntu

    Description

      Compiled recent Qt 4.7
      Compiled head creator (including qttest plugin)
      Enabled Qttest plugin in 'About plugins'
      Launch Creator
      split left hand plane and make sure 'Tests' are shown in one of them.
      open Qt/master project

      Problem:
      QtCreator(6940)/ KSycocaPrivate::openDatabase: Trying to open ksycoca from "/var/tmp/kdecache-ebaak/ksycoca4"
      Qt Concurrent has caught an exception thrown from a worker thread.
      This is not supported, exceptions thrown in worker threads must be
      caught before control returns to Qt Concurrent.
      terminate called after throwing an instance of 'std::bad_alloc'
      what(): std::bad_alloc
      Aborted

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sbradley Shane Bradley (closed Nokia identity) (Inactive)
            ebaak Ed Baak (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes