qttest: Incremental improvement to the tests scanning logic.

This should fix (or reduce the chance of) the crashing issue
when opening a large project, and make the UI remain responsive.

Task-number: QTCREATORBUG-5991
Change-Id: I29c652794600460e3170bbf25b5847adcc9209ef
Reviewed-on: http://codereview.qt-project.org/5431
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Eike Ziller <eike.ziller@nokia.com>